k8s/maildev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  namespace: ocr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
      - name: maildev
        image: maildev/maildev:2.1.0
        imagePullPolicy: IfNotPresent
        args: ["--web", "1080", "--smtp", "1025"]
        ports:
        - containerPort: 1025
        - containerPort: 1080
---
apiVersion: v1
kind: Service
metadata:
  name: maildev
  namespace: ocr
spec:
  selector:
    app: maildev
  ports:
  - name: smtp
    port: 1025
    targetPort: 1025
  - name: web
    port: 1080
    targetPort: 1080
