k8s/ingress-maildev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maildev
  namespace: ocr
spec:
  ingressClassName: nginx
  rules:
  - host: maildev.localtest.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: maildev
            port:
              number: 1080
